--- a/app/src/main/res/layout/allbook_main.xml
+++ b/app/src/main/res/layout/allbook_main.xml
@@ -8,11 +8,18 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="jp.shiningplace.erika.takenoue.everything.ExampleFragment">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listView1" />
+
+    </android.support.v4.widget.NestedScrollView>
 </RelativeLayout>
