--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -125,11 +125,19 @@
         android:inputType="textMultiLine"
         android:maxLines="10" />
 
+    <TextView
+        android:id="@+id/imageTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/contentText"
+        android:text="画像" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_below="@+id/contentText"
+        android:layout_height="120dp"
+        android:layout_below="@+id/imageTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="12dp"
         android:background="#d3d3d3" />
