--- a/app/src/main/res/layout/list_allbook.xml
+++ b/app/src/main/res/layout/list_allbook.xml
@@ -5,28 +5,27 @@
 
 
     <ImageView
-        android:layout_width="80dp"
+        android:id="@+id/imageView2"
+        android:layout_width="60dp"
         android:layout_height="80dp"
-        android:id="@+id/imageView"
-        android:layout_margin="2dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Title"
         android:id="@+id/titleTextView"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_toRightOf="@+id/imageView2"
+        android:text="Title" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/authorTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/resTextView"
+        android:layout_alignBottom="@+id/imageView2"
         android:layout_below="@+id/titleTextView"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_toEndOf="@+id/imageView2"
+        android:text="New Text" />
 
 </RelativeLayout>
