--- a/app/src/main/res/layout/barcode_main.xml
+++ b/app/src/main/res/layout/barcode_main.xml
@@ -19,10 +19,13 @@
         android:id="@+id/barcodeReaderLayout">
 
         <TextView
-            android:text="バーコード"
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView"/>
+            android:layout_marginTop="17dp"
+            android:paddingStart="10dp"
+            android:text="バーコードを読み取り、検索します。"
+            android:textSize="15dp" />
 
         <Space
             android:layout_width="match_parent"
