--- a/app/src/main/res/layout/bookdetail_main.xml
+++ b/app/src/main/res/layout/bookdetail_main.xml
@@ -102,4 +102,15 @@
         android:layout_alignBottom="@+id/itemCaptionDetailText"
         android:layout_alignParentStart="true" />
 
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:id="@+id/buttonDetail"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:bootstrapSize="lg"
+        android:layout_below="@+id/itemCaptionDetailView"
+        android:layout_marginTop="30dp"
+        android:text="登録"
+        app:roundedCorners="true"
+        app:bootstrapBrand="info"/>
+
 </RelativeLayout>
