--- a/app/src/main/res/layout/list_allbook.xml
+++ b/app/src/main/res/layout/list_allbook.xml
@@ -8,14 +8,16 @@
         android:id="@+id/imageView2"
         android:layout_width="60dp"
         android:layout_height="80dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="match_parent"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/imageView2"
         android:text="Title" />
@@ -24,7 +26,7 @@
         android:id="@+id/authorTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:paddingBottom="10dp"
         android:layout_alignBottom="@+id/imageView2"
         android:layout_below="@+id/titleTextView"
         android:layout_toEndOf="@+id/imageView2"
