--- a/app/src/main/res/menu/menu_second.xml
+++ b/app/src/main/res/menu/menu_second.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_search"
-        android:icon="@drawable/ic_search_white_24dp"
+        android:id="@+id/action_edit"
+        android:icon="@drawable/ic_mode_edit_white_24dp"
         app:showAsAction="always"
-        android:title="search"/>
+        android:title="editing"/>
 </menu>
