--- a/app/src/main/res/layout/barcode_main.xml
+++ b/app/src/main/res/layout/barcode_main.xml
@@ -27,14 +27,13 @@
             android:text="バーコードを読み取り、検索します。"
             android:textSize="15dp" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="70dp"/>
-
         <com.journeyapps.barcodescanner.CompoundBarcodeView
             android:id="@+id/barcodeView"
+            android:layout_below="@+id/textView"
+            android:layout_marginTop="50dp"
             android:layout_width="wrap_content"
-            android:layout_height="300dp" />
+            android:layout_marginBottom="80dp"
+            android:layout_height="match_parent" />
 
 
     </LinearLayout>
