--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:bootstrap="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -101,8 +100,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/sizeView"
         android:layout_toRightOf="@+id/spinner"
-        android:clickable="true"
-        android:focusable="false"
         android:gravity="top"
         android:inputType="date"
         android:maxLines="10" />
