--- a/app/src/main/res/layout/bookdetail_main.xml
+++ b/app/src/main/res/layout/bookdetail_main.xml
@@ -14,21 +14,27 @@
 
     <ImageView
         android:id="@+id/imageDetail"
-        android:layout_width="100dp"
-        android:layout_height="120dp"
-        android:layout_alignParentTop="true"/>
+        android:layout_width="120dp"
+        android:layout_height="140dp"
+        android:layout_alignParentTop="true" />
 
     <TextView
         android:id="@+id/titleDetail"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
+        android:textSize="18dp"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/imageDetail" />
 
     <TextView
         android:id="@+id/authorDetail"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
+        android:textSize="14dp"
         android:layout_alignBottom="@+id/imageDetail"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
@@ -90,7 +96,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/sizeDetailText"
+        android:layout_below="@+id/sizeDetailView"
         android:layout_marginTop="10dp"
         android:text="概要" />
 
@@ -98,8 +104,7 @@
         android:id="@+id/itemCaptionDetailView"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:layout_alignBaseline="@+id/itemCaptionDetailText"
-        android:layout_alignBottom="@+id/itemCaptionDetailText"
+        android:layout_below="@+id/itemCaptionDetailText"
         android:layout_alignParentStart="true" />
 
     <com.beardedhen.androidbootstrap.BootstrapButton
