--- a/app/src/main/res/layout/list_allbook.xml
+++ b/app/src/main/res/layout/list_allbook.xml
@@ -6,10 +6,10 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="60dp"
-        android:layout_height="80dp"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
+        android:layout_width="80dp"
+        android:layout_height="100dp"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
@@ -17,19 +17,23 @@
         android:id="@+id/titleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
+        android:paddingTop="5dp"
+        android:layout_marginStart="10dp"
         android:layout_alignParentTop="true"
+        android:textSize="15dp"
         android:layout_toRightOf="@+id/imageView2"
         android:text="Title" />
 
     <TextView
         android:id="@+id/authorTextView"
         android:layout_width="match_parent"
+        android:layout_marginStart="10dp"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
+        android:layout_toRightOf="@+id/imageView2"
+        android:layout_alignParentEnd="true"
+        android:paddingBottom="5dp"
         android:layout_alignBottom="@+id/imageView2"
-        android:layout_below="@+id/titleTextView"
-        android:layout_toEndOf="@+id/imageView2"
-        android:text="New Text" />
+        android:text="New Text"
+        android:textSize="12dp" />
 
 </RelativeLayout>
