--- a/app/src/main/res/layout/barcode_main.xml
+++ b/app/src/main/res/layout/barcode_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,7 +24,7 @@
             android:layout_marginTop="17dp"
             android:paddingStart="10dp"
             android:text="バーコードを読み取り、検索します。"
-            android:textSize="15dp" />
+            android:textSize="@dimen/text_medium"/>
 
         <com.journeyapps.barcodescanner.CompoundBarcodeView
             android:id="@+id/barcodeView"
