--- a/app/src/main/res/layout/detailviewpager.xml
+++ b/app/src/main/res/layout/detailviewpager.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="16dp"
@@ -16,24 +14,30 @@
     android:paddingTop="16dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-
     <ImageView
         android:id="@+id/imageDetail2"
-        android:layout_width="100dp"
-        android:layout_height="120dp"
+        android:layout_width="@dimen/image_width2"
+        android:layout_height="@dimen/image_height2"
+        android:layout_marginStart="@dimen/Start"
         android:layout_alignParentTop="true"/>
 
     <TextView
         android:id="@+id/titleDetail2"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/text_large"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/imageDetail2" />
 
     <TextView
         android:id="@+id/authorDetail2"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/text_medium"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_alignBottom="@+id/imageDetail2"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
@@ -42,84 +46,102 @@
     <TextView
         android:id="@+id/publisherDetailText2"
         android:layout_width="80dp"
-        android:layout_height="20dp"
+        android:textSize="@dimen/text_medium"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/imageDetail2"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/Top4"
+        android:layout_marginStart="@dimen/Start"
         android:text="出版社" />
 
     <TextView
         android:id="@+id/publisherDetailView2"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/text_medium"
         android:layout_below="@+id/imageDetail2"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/Top4"
         android:layout_toRightOf="@+id/publisherDetailText2" />
 
     <TextView
         android:id="@+id/dateDetailText2"
         android:layout_width="80dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/text_medium"
         android:layout_alignParentStart="true"
+        android:layout_marginStart="@dimen/Start"
         android:layout_below="@+id/publisherDetailText2"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/Top2"
         android:text="発売日" />
 
     <TextView
         android:id="@+id/dateDetailView2"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/publisherDetailView2"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/Top2"
+        android:textSize="@dimen/text_medium"
         android:layout_toRightOf="@+id/dateDetailText2"/>
 
     <TextView
         android:id="@+id/sizeDetailText2"
         android:layout_width="80dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/text_medium"
+        android:layout_marginStart="@dimen/Start"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/dateDetailView2"
-        android:layout_marginTop="10dp"
-        android:text="分類" />
+        android:layout_marginTop="@dimen/Top2"
+        android:text="サイズ" />
 
     <TextView
         android:id="@+id/sizeDetailView2"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/dateDetailText2"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/Top2"
+        android:textSize="@dimen/text_medium"
         android:layout_toRightOf="@+id/sizeDetailText2" />
 
     <TextView
         android:id="@+id/enddateDetailText"
         android:layout_width="80dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/text_medium"
+        android:layout_marginStart="@dimen/Start"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/sizeDetailText2"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/Top2"
         android:text="読了日" />
 
     <TextView
         android:id="@+id/enddateDetailView"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/sizeDetailText2"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/Top2"
+        android:textSize="@dimen/text_medium"
         android:layout_toRightOf="@+id/enddateDetailText"/>
 
     <TextView
         android:id="@+id/itemCaptionDetailText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/Start"
         android:layout_alignParentStart="true"
+        android:textSize="@dimen/text_medium"
         android:layout_below="@+id/enddateDetailText"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/Top4"
         android:text="概要" />
 
     <TextView
         android:id="@+id/itemCaptionDetailView2"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_marginStart="@dimen/Start"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginTop="@dimen/Top_sub"
+        android:textSize="@dimen/text_medium"
        android:layout_below="@+id/itemCaptionDetailText2"
         android:layout_alignParentStart="true" />
 
@@ -127,15 +149,21 @@
         android:id="@+id/memoText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/Start"
+        android:textSize="@dimen/text_medium"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/itemCaptionDetailView2"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/Top2"
         android:text="メモ" />
 
     <TextView
         android:id="@+id/memoView2"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_marginStart="@dimen/Start"
+        android:layout_marginEnd="5dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/Top_sub"
+        android:textSize="@dimen/text_medium"
         android:layout_below="@+id/memoText2"
         android:layout_alignParentStart="true" />
 
