--- a/app/src/main/res/layout/list_allbook.xml
+++ b/app/src/main/res/layout/list_allbook.xml
@@ -3,11 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="80dp"
-        android:layout_height="100dp"
+        android:layout_width="@dimen/image_width"
+        android:layout_height="@dimen/image_height"
         android:paddingBottom="5dp"
         android:paddingTop="5dp"
         android:layout_alignParentStart="true"
@@ -17,12 +16,11 @@
         android:id="@+id/titleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
+        android:paddingTop="@dimen/Top"
         android:layout_marginStart="10dp"
         android:layout_alignParentTop="true"
-        android:textSize="15dp"
-        android:layout_toRightOf="@+id/imageView2"
-        android:text="Title" />
+        android:textSize="@dimen/text_medium"
+        android:layout_toRightOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/authorTextView"
@@ -31,9 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/imageView2"
         android:layout_alignParentEnd="true"
-        android:paddingBottom="5dp"
+        android:paddingBottom="@dimen/Bottom"
         android:layout_alignBottom="@+id/imageView2"
-        android:text="New Text"
-        android:textSize="12dp" />
+        android:textSize="@dimen/text_small" />
 
 </RelativeLayout>
