--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -21,7 +21,7 @@
         <item
             android:id="@+id/nav_backup"
             android:icon="@drawable/ic_settings_black_24dp"
-            android:title="バックアップ"/>
+            android:title="設定"/>
         <item
             android:id="@+id/nav_contact"
             android:icon="@drawable/ic_email_black_24dp"
